--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <p>hello<br />
+      how
+      are you
+    </p>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
